@@ -8,7 +8,8 @@ NEW FEATURES
 
     o readBamGappedReads()
 
-    o Add use.names arg to readBamGappedAlignments()
+    o Add use.names and param args to readBamGappedAlignments(); dropped
+    which and ... args.
 
     o PileupFiles, PileupParam, applyPileup for visiting several BAM
     files and calculating pile-ups on each.
